--- a/src/pages/home/ui/home-page/cta-section/cta-section.component.html
+++ b/src/pages/home/ui/home-page/cta-section/cta-section.component.html
@@ -7,9 +7,12 @@
           Этот прототип показывает ключевые блоки главной страницы и базовые сценарии для двух ролей маркетплейса.
         </p>
       </div>
-      <button class="btn btn-primary bg-lime-400 text-black font-bold py-3 px-8 rounded-lg hover:bg-lime-500 transition-colors duration-200">
+      <app-button
+        variant="primary"
+        size="xl"
+      >
         Начать размещать задачи
-      </button>
+      </app-button>
     </div>
   </div>
 </section>
